added a link to nvda build with kyrgyz support

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 ---
-layout: default
+layout: page
 ---
+
+<h1 class="page-heading">Downloads</h1>
+
+
+You can download an NVDA installer with Kyrgyz language support <A HREF="http://jrmeyer.github.io/misc/nvda_kyrgyz_12_10_2016.exe">here.</A> You should be able to install the program by double clicking on the file and following the directions. To turn Kyrgyz language support on or off, navigate to "Voices" under "Settings" after you've installed the program. This project was conducted with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A>, a non-profit organization for blind people in Kyrgyzstan. Any feedback on the Kyrgyz support (accent, translation, errors, etc) is gladly welcomed!
+
+
+</br>
+</br>
+</br>
 
 <div class="home">
 
