added some embedded videos

--- a/index.html
+++ b/index.html
@@ -2,15 +2,34 @@
 layout: page
 ---
 
+
 <h1 class="page-heading">Downloads</h1>
 
 
-You can download an NVDA installer with Kyrgyz language support <A HREF="http://jrmeyer.github.io/misc/nvda_kyrgyz_12_10_2016.exe">here.</A> You should be able to install the program by double clicking on the file and following the directions. To turn Kyrgyz language support on or off, navigate to "Voices" under "Settings" after you've installed the program. This project was conducted with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A>, a non-profit organization for blind people in Kyrgyzstan. Any feedback on the Kyrgyz support (accent, translation, errors, etc) is gladly welcomed!
+You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with Kyrgyz language support <A HREF="http://jrmeyer.github.io/misc/nvda_kyrgyz_12_10_2016.exe">here.</A> You should be able to install the program by double clicking on the file and following the directions. To turn Kyrgyz language support on or off, navigate to "Voices" under "Settings" after you've installed the program. This project was conducted with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A>, a non-profit organization for blind people in Kyrgyzstan. Any feedback on the Kyrgyz support (accent, translation, errors, etc) is gladly welcomed!
+
+<br/>
+<br/>
+<br/>
 
 
-</br>
-</br>
-</br>
+<h1 class="page-heading">News</h1>
+
+Here's some news about my project with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A> to create a speech synthesizer for the Kyrgyz language, to be used in the open source project <A HREF="http://www.nvaccess.org/">NVDA</A>.
+
+<br/>
+<br/>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RXamyDte4p0" frameborder="0" allowfullscreen></iframe>
+
+<br/>
+
+<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fkloop.kg%2Fvideos%2F10153989797859639%2F&show_text=0&width=400" width="400" height="400" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+
+<br/>
+<br/>
+<br/>
+
 
 <div class="home">
 
