facebook video not displaying for some reason, commented it out

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ Here's some news about my project with <A HREF="https://www.facebook.com/Empower
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RXamyDte4p0" frameborder="0" allowfullscreen></iframe>
 
-<br/>
+<!-- <br/> -->
 
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fkloop.kg%2Fvideos%2F10153989797859639%2F&show_text=0&width=400" width="400" height="400" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+<!-- <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fkloop.kg%2Fvideos%2F10153989797859639%2F&show_text=0&width=400" width="400" height="400" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
 
 <br/>
 <br/>
