facebook embedding not working on firefox, but fine in chrome...

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 layout: page
 ---
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.8";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+
 
 <h1 class="page-heading">Downloads</h1>
 
@@ -22,9 +32,16 @@ Here's some news about my project with <A HREF="https://www.facebook.com/Empower
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RXamyDte4p0" frameborder="0" allowfullscreen></iframe>
 
-<!-- <br/> -->
+<br/>
+<br/>
 
-<!-- <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fkloop.kg%2Fvideos%2F10153989797859639%2F&show_text=0&width=400" width="400" height="400" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
+<div class="fb-video" 
+     data-href="https://www.facebook.com/kloop.kg/videos/10153989797859639/" 
+     data-width="500" 
+     data-show-text="true"
+><blockquote cite="https://www.facebook.com/kloop.kg/videos/10153989797859639/" 
+             class="fb-xfbml-parse-ignore"
+><a href="https://www.facebook.com/kloop.kg/videos/10153989797859639/"></a><p>Иностранные программисты о программе, которая помогает незрячим читать текст на кыргызском языке.</p>Опубликовано <a href="https://www.facebook.com/kloop.kg/">Kloop</a> 5 октября 2016 г.</blockquote></div>
 
 <br/>
 <br/>
