fixed the buidling error somehow... all i did was copy and paste into a new html file and it worked... maybe the encoding got goofed, not sure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-﻿---
-layout: page
+---
+layout: default
 ---
 
 <div id="fb-root"></div>
@@ -10,7 +10,6 @@ layout: page
   js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.8";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-
 
 
 <h1 class="page-heading">Downloads</h1>
@@ -24,6 +23,11 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 
 
 <h1 class="page-heading">News</h1>
+
+There's two videos below, but you need to use Google Chrome to see both, unfortunately.
+
+<br/>
+<br/>
 
 Here's some news about my project with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A> to create a speech synthesizer for the Kyrgyz language, to be used in the open source project <A HREF="http://www.nvaccess.org/">NVDA</A>.
 
