--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 
 <h1 class="page-heading">News</h1>
 
-There's two videos below, but you need to use Google Chrome to see both, unfortunately.
+Here's a couple videos below about our speech synthesis project for the Kyrgyz language.
 
 <br/>
 <br/>
@@ -51,6 +51,16 @@ Here's some news about my project with <A HREF="https://www.facebook.com/Empower
 <br/>
 <br/>
 
+Here's an interview I did in Paris at France Inter during the Week of Young International Scientific Talents (Semaine des jeunes talents scientifiques internationaux):
+
+<br/>
+<br/>
+
+<iframe src="https://www.franceinter.fr/embed/player/aod/70cc17ef-425c-4cbb-b2d1-b7277fb94590" width="100%" height="64" frameborder="0" scrolling="no"></iframe>
+
+<br/>
+<br/>
+<br/>
 
 <div class="home">
 
