--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -12,55 +13,11 @@ layout: default
 }(document, 'script', 'facebook-jssdk'));</script>
 
 
-<h1 class="page-heading">Downloads</h1>
 
 
-You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with Kyrgyz language support <A HREF="http://jrmeyer.github.io/misc/NVDA_with_kyrgyz_11-11-2016.exe">here.</A> You should be able to install the program by double clicking on the file and following the directions. To turn Kyrgyz language support on or off, navigate to "Voices" under "Settings" after you've installed the program. This project was conducted with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A>, a non-profit organization for blind people in Kyrgyzstan. Any feedback on the Kyrgyz support (accent, translation, errors, etc) is gladly welcomed!
-
-<br/>
-<br/>
-<br/>
-
-
-<h1 class="page-heading">News</h1>
-
-Here's a couple videos below about our speech synthesis project for the Kyrgyz language.
-
-<br/>
-<br/>
-
-Here's some news about my project with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A> to create a speech synthesizer for the Kyrgyz language, to be used in the open source project <A HREF="http://www.nvaccess.org/">NVDA</A>.
-
-<br/>
-<br/>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/RXamyDte4p0" frameborder="0" allowfullscreen></iframe>
-
-<br/>
-<br/>
-
-<div class="fb-video" 
-     data-href="https://www.facebook.com/kloop.kg/videos/10153989797859639/" 
-     data-width="500" 
-     data-show-text="true"
-><blockquote cite="https://www.facebook.com/kloop.kg/videos/10153989797859639/" 
-             class="fb-xfbml-parse-ignore"
-><a href="https://www.facebook.com/kloop.kg/videos/10153989797859639/"></a><p>Иностранные программисты о программе, которая помогает незрячим читать текст на кыргызском языке.</p>Опубликовано <a href="https://www.facebook.com/kloop.kg/">Kloop</a> 5 октября 2016 г.</blockquote></div>
-
-<br/>
-<br/>
-<br/>
-
-Here's an interview I did in Paris at France Inter during the Week of Young International Scientific Talents (Semaine des jeunes talents scientifiques internationaux):
-
-<br/>
-<br/>
-
-<iframe src="https://www.franceinter.fr/embed/player/aod/70cc17ef-425c-4cbb-b2d1-b7277fb94590" width="100%" height="64" frameborder="0" scrolling="no"></iframe>
-
-<br/>
-<br/>
-<br/>
+<center>
+<img src="misc/josh-pic.jpg" style="margin:25px; padding:25px;" height="400" alt="what a pic!">
+</center>
 
 <div class="home">
 
@@ -81,3 +38,80 @@ Here's an interview I did in Paris at France Inter during the Week of Young Inte
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
+
+
+
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+<h1 class="page-heading">Downloads</h1>
+
+
+You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with Kyrgyz language support <A HREF="http://jrmeyer.github.io/misc/NVDA_with_kyrgyz_11-11-2016.exe">here.</A> You should be able to install the program by double clicking on the file and following the directions. To turn Kyrgyz language support on or off, navigate to "Voices" under "Settings" after you've installed the program. This project was conducted with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A>, a non-profit organization for blind people in Kyrgyzstan. Any feedback on the Kyrgyz support (accent, translation, errors, etc) is gladly welcomed!
+
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+
+
+<h1 class="page-heading">News</h1>
+
+Here's a couple videos below about our speech synthesis project for the Kyrgyz language.
+
+<br/>
+<br/>
+
+Here's some news about my project with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A> to create a speech synthesizer for the Kyrgyz language, to be used in the open source project <A HREF="http://www.nvaccess.org/">NVDA</A>.
+
+<br/>
+<br/>
+
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RXamyDte4p0" frameborder="0" allowfullscreen></iframe>
+</center>
+  
+<br/>
+<br/>
+
+<center>
+<div class="fb-video" 
+     data-href="https://www.facebook.com/kloop.kg/videos/10153989797859639/" 
+     data-width="500" 
+     data-show-text="true"
+><blockquote cite="https://www.facebook.com/kloop.kg/videos/10153989797859639/" 
+             class="fb-xfbml-parse-ignore"
+><a href="https://www.facebook.com/kloop.kg/videos/10153989797859639/"></a><p>Иностранные программисты о программе, которая помогает незрячим читать текст на кыргызском языке.</p>Опубликовано <a href="https://www.facebook.com/kloop.kg/">Kloop</a> 5 октября 2016 г.</blockquote></div>
+</center>
+  
+<br/>
+<br/>
+<br/>
+
+Here's an interview I did in Paris at France Inter during the Week of Young International Scientific Talents (Semaine des jeunes talents scientifiques internationaux):
+
+<br/>
+<br/>
+
+<iframe src="https://www.franceinter.fr/embed/player/aod/70cc17ef-425c-4cbb-b2d1-b7277fb94590" width="100%" height="64" frameborder="0" scrolling="no"></iframe>
+
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
