--- a/index.html
+++ b/index.html
@@ -163,24 +163,31 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 <h1 class="page-heading" style="font-size:40px;" >News</h1>
 
 
-Here's an interview I did in Paris at France Inter during the Week of Young International Scientific Talents (Semaine des jeunes talents scientifiques internationaux):
+Here's an interview I did in Paris during the Week of Young International Scientific Talents (Semaine des jeunes talents scientifiques internationaux):
 
 <br/>
 <br/>
+<br/>
+<br/>
+
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/A5Yr7cFzxmU" frameborder="0" allowfullscreen></iframe>
+</center>
+
+<br/>
+<br/>
+
+Here's another interview from the same week at France Inter.
+
 <br/>
 <br/>
 
 <iframe src="https://www.franceinter.fr/embed/player/aod/70cc17ef-425c-4cbb-b2d1-b7277fb94590" width="100%" height="64" frameborder="0" scrolling="no"></iframe>
 
-
-Here's a couple videos below about our speech synthesis project for the Kyrgyz language.
-
-<br/>
-<br/>
 <br/>
 <br/>
 
-Here's some news about my project with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A> to create a speech synthesizer for the Kyrgyz language, to be used in the open source project <A HREF="http://www.nvaccess.org/">NVDA</A>.
+Here's a couple videos below about our speech synthesis project for the Kyrgyz language. This project was done in collaboration with <A HREF="https://www.facebook.com/EmpowerBlindPeople/">Empower Blind People</A> to create a speech synthesizer for the Kyrgyz language, to be used in the open source project <A HREF="http://www.nvaccess.org/">NVDA</A>.
 
 <br/>
 <br/>
