--- a/index.html
+++ b/index.html
@@ -195,6 +195,15 @@ Here's a couple videos below about our speech synthesis project for the Kyrgyz l
 <br/>
 
 <center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/g9YFisVA24E" frameborder="0" allowfullscreen></iframe>
+</center>
+
+<br/>
+<br/>
+<br/>
+<br/>
+
+<center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RXamyDte4p0" frameborder="0" allowfullscreen></iframe>
 </center>
   
