--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 <h1 class="page-heading" style="font-size:40px;" >News</h1>
 
 
+News about the Hakha Chin language being added to Mozilla's Common Voice. The project was spear-headed by Peng Hlei Thang and the Linguistics Department at Indiana University Bloomington.
+
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/f39dFqqVIak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+
 Here's an interview I did in Paris during the Week of Young International Scientific Talents (Semaine des jeunes talents scientifiques internationaux):
 
 <br/>
