--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 <h1 class="page-heading" style="font-size:40px;" >News</h1>
 
 
+<audio data-theme="night" data-src="https://changelog.com/practicalai/104/embed" src="https://cdn.changelog.com/uploads/practicalai/104/practical-ai-104.mp3" preload="none" class="changelog-episode" controls></audio><p><a href="https://changelog.com/practicalai/104">Practical AI 104: Speech tech and Common Voice at Mozilla</a> – Listen on <a href="https://changelog.com/">Changelog.com</a></p><script async src="//cdn.changelog.com/embed.js"></script>
+
+<br/>
+<br/>
+
 News about the Hakha Chin language being added to Mozilla's Common Voice. The project was spear-headed by Peng Hlei Thang and the Linguistics Department at Indiana University Bloomington.
 
 <br/>
