--- a/index.html
+++ b/index.html
@@ -154,6 +154,15 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 
 <h1 class="page-heading" style="font-size:40px;" >News</h1>
 
+<br/>
+<br/>
+
+<center>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/w8dixW6ycAY?start=1800" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+
+<br/>
+<br/>
 
 <audio data-theme="night" data-src="https://changelog.com/practicalai/104/embed" src="https://cdn.changelog.com/uploads/practicalai/104/practical-ai-104.mp3" preload="none" class="changelog-episode" controls></audio><p><a href="https://changelog.com/practicalai/104">Practical AI 104: Speech tech and Common Voice at Mozilla</a> – Listen on <a href="https://changelog.com/">Changelog.com</a></p><script async src="//cdn.changelog.com/embed.js"></script>
 
