moz fellow vid + nocookies

--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 
 <br/>
 <br/>
+<center>
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/EI56RTne-TY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+
+<br/>
+<br/>
 
 <center>
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/w8dixW6ycAY?start=1800" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -177,7 +184,7 @@ News about the Hakha Chin language being added to Mozilla's Common Voice. The pr
 <br/>
 
 <center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/f39dFqqVIak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/f39dFqqVIak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 
 <br/>
@@ -193,7 +200,7 @@ Here's an interview I did in Paris during the Week of Young International Scient
 <br/>
 
 <center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/A5Yr7cFzxmU" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/A5Yr7cFzxmU" frameborder="0" allowfullscreen></iframe>
 </center>
 
 <br/>
@@ -217,7 +224,7 @@ Here's a couple videos below about our speech synthesis project for the Kyrgyz l
 <br/>
 
 <center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/g9YFisVA24E" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/g9YFisVA24E" frameborder="0" allowfullscreen></iframe>
 </center>
 
 <br/>
@@ -226,7 +233,7 @@ Here's a couple videos below about our speech synthesis project for the Kyrgyz l
 <br/>
 
 <center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/RXamyDte4p0" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RXamyDte4p0" frameborder="0" allowfullscreen></iframe>
 </center>
   
 <br/>
