add harvard vid

--- a/index.html
+++ b/index.html
@@ -154,6 +154,15 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 
 <h1 class="page-heading" style="font-size:40px;" >News</h1>
 
+
+<br/>
+<br/>
+<center>
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/BTg-PUNi9jw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+
+
 <br/>
 <br/>
 <center>
