--- a/index.html
+++ b/index.html
@@ -152,8 +152,16 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 
 
 
-<h1 class="page-heading" style="font-size:40px;" >News</h1>
 
+
+<h1 class="page-heading" style="font-size:40px;" >Lectures / Talks</h1>
+
+
+<br/>
+<br/>
+<center>
+<iframe src="https://open.spotify.com/embed/episode/5KjSoCif3liIExKjTWVtxd" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+</center>
 
 <br/>
 <br/>
