trying to fix rendering issues

--- a/index.html
+++ b/index.html
@@ -154,27 +154,26 @@ You can download an <A HREF="http://www.nvaccess.org/">NVDA</A> installer with K
 
 
 
-<h1 class="page-heading" style="font-size:40px;" >Lectures / Talks</h1>
-
+<h1 class="page-heading" style="font-size:40px;" >Lectures & Talks</h1>
 
 <br/>
 <br/>
+
 <center>
-<iframe src="https://open.spotify.com/embed/episode/5KjSoCif3liIExKjTWVtxd" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe src="https://open.spotify.com/embed/episode/5KjSoCif3liIExKjTWVtxd" width="560" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </center>
 
 <br/>
 <br/>
-<center>
 
+<center>
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/BTg-PUNi9jw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 
+<br/>
+<br/>
 
-<br/>
-<br/>
 <center>
-
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/EI56RTne-TY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 
@@ -209,7 +208,7 @@ News about the Hakha Chin language being added to Mozilla's Common Voice. The pr
 <br/>
 <br/>
 
-Here's an interview I did in Paris during the Week of Young International Scientific Talents (Semaine des jeunes talents scientifiques internationaux):
+Interview during the Week of Young International Scientific Talents (Semaine des jeunes talents scientifiques internationaux):
 
 <br/>
 <br/>
