--- a/index.html
+++ b/index.html
@@ -14,19 +14,14 @@ layout: default
 
 
 
-
-<center>
-<img src="misc/josh-pic.jpg" style="margin:45px; padding:45px;" height="450" alt="what a pic!">
-</center>
-
-
+<div style="display: flex; justify-content: center; align-items: center; gap: 20px; margin-bottom: 20px;">
+    <img src="misc/josh-pic.jpg" alt="what a pic!" style="max-height: 450px;">
+    <img src="misc/Lfst-big.png" alt="" style="max-height: 500px;">
+</div>
 
 
 <div class="home">
-  
 
-  <center><img src="misc/Lfst-big.png" height="500"></center>
-<br/>
 <br/>
     <h1 class="page-heading" style="font-size:40px;" >Speech Recognition</h1>
 
